Fix header menu spacing

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -62,13 +62,13 @@ header .pageHeading { font-family: 'helvetica neue'; font-size: 18px; font-weigh
 header .pageHeading .bottom { font-weight: normal }
 header.withHeading .logoLink { display: none; }
   @include desktop {
-    header  { position: fixed; width: 100%; background-color: white; top: 0; height: $desktopHeaderHeight; border-bottom: $greyLine; text-align: center; }
+    header  { background-color: white; height: $desktopHeaderHeight; border-bottom: $greyLine; text-align: center; }
     header .smallLogoLink { display: none; }
     header .logo { width: 24px; margin-top: -6px; }
     header.withHeading .logoLink { display: inline; }
     header.withHeading .pageHeading { display: none; }
     header .hamburger { display: none; }
-    header .menu { top: 12px; width: 100%; background-color: transparent; border-radius: 0; display: flex; align-items: space-between; justify-content: center; }
+    header .menu { width: 100%; position: static; max-width: 1020px; margin: 12px auto 0; background-color: transparent; border-radius: 0; display: flex; justify-content: space-between; }
     header .item  { font-size: 14px; display: block; padding: 0; border-top: 0; color: $contextGrey; text-transform: none; padding: 0 1em; }
     header .item.active { border: 4px solid $accentBrown; border-width: 0 0 4px 0; padding-bottom: 16px; }
   }
